<resources>

    //user msg
    <string name="msg_loading">Opdaterer...</string>
    <string name="msg_no_puchased_gc">Du har ikke nogen købte gavekort endnu.</string>
    <string name="msg_you_have_no_gc_for_sale">Du har ikke nogen gavekort til salg</string>
    <string name="msg_password_mismatch">Dine passwords matcher ikke</string>
    <string name="msg_all_fields_be_filled">Alle felter skal udfyldes</string>
    <string name="msg_facebook_error">Noget gik galt</string>
    <string name="msg_create_user">Opret en bruger så du kan sælge og købe gavekort</string>
    <string name="msg_terms_conditions_body">Åge Hareide viste under tirsdagens træning lidt af det, som man nok kan forvente sig i den kommende tid. Forhåbentlig får vi endnu mere at vide i dag på pressemødet, men under alle omstændigheder, så vil landstræneren givetvis give nogle svar med den opstilling, som han sender i kamp mod Island torsdag aften.</string>
    <string name="msg_failed_login">Vi kan desværre ikke logge dig på Giifty lige nu</string>
    <string name="msg_mobilepay_needs_update">Mobilepay skal opdateres inden købet</string>
    <string name="msg_mobilepay_max_amount_reached">Du har nået din maximum købesum i denne måned</string>
    <string name="msg_transaction_timeout">din transaktion varet mere end 5 min, prøv igen</string>
    <string name="msg_try_again">Noget gik galt, prøv venligst igen</string>
    <string name="msg_create_user_error">Noget gik galt med at oprette bruger</string>
    <string name="generel_error_msg">Hov, noget gik galt, beklager.</string>
    <string name="signin_error_msg">Du kunne ikke logges ind, er dine oplysninger rigtige?</string>

    // transition names
    <string name="hero_transition_giftcard">hero_giftcard</string>

    //drawer menu names
    <string name="buy_giftcard">Køb gavekort</string>
    <string name="create_giftcard">Opret gavekort</string>
    <string name="purchased_giftcard">Købte gavekort</string>
    <string name="my_giftcard">Mine gavekort</string>
    <string name="settings">Indstillinger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    // text
    <string name="create_giftcard_for">Opret gavekort til</string>
    <string name="app_name">Giifty</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_giftcard_view">GiftcardViewActivity</string>
    <string name="hero_gridview_item">hero_for_grid_items</string>
    <string name="kr">kr.</string>
    <string name="action_settings">Settings</string>
    <string name="logged_in_as">Logget ind som:</string>
    <string name="facebook_app_id">109193266146302</string>
    <string name="sign_in_text">Log in</string>
    <string name="create_user">Opret bruger</string>
    <string name="password_repeated">Password gentaget</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Fornavn og efternavn</string>
    <string name="create_manuel">Eller indtast manuelt:</string>
    <string name="fetch_from_facebook">Hent oplysningerne fra Facebook</string>
    <string name="account_nr">Konto nr</string>
    <string name="phone_nr">Telefon</string>
    <string name="reg">Reg. nr</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cardholder_name">Navn på kortet</string>
    <string name="accept">Acceptér</string>
    <string name="decline">Afvis</string>
    <string name="terms_conditions_title">Handelsbetingelser</string>
    <string name="later">Senere</string>
    <string name="add_account">Tilføj konto</string>
    <string name="account_info_title">Konto oplysninger</string>
    <string name="update_user">Opdater bruger</string>
    <string name="purchase_giftcard">Køb Gavekort</string>
    <string name="pay">"Betal "</string>
    <string name="giftcard">gavekort</string>
    <string name="card_nr">Kort nr</string>
    <string name="date">Dato</string>
    <string name="security_nr">CRV</string>
    <string name="how_to_text">Scan stregkoden ved kassen næste gang du shopper</string>
    <string name="value">Værdi</string>
    <string name="your_price">Din pris</string>
    <string name="expiry_date">"Udløbsdato: "</string>
    <string name="you_have_bought">Du har købt et </string>
    <string name="with_value"> gavekort til</string>
    <string name="sign_in">Log ind</string>
    <string name="signin_as_text">Log ind som:</string>

    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="msg_error_barcode_creation">Beklager, en fejl opstod mens vi produceret oprettet stregkoden.</string>
    <string name="comment">Kommentar</string>
    <string name="missing_input">Skal udfyldes</string>
    <string name="walk_trough_overview">Gennemgang af oplysninger</string>

    <string name="price_and_description">Vælg pris og beskrivelse</string>
    <string name="take_picture">Tag salgsbillede</string>
    <string name="create_barcode">Scan stregkode</string>
    <string name="giftcard_for">Gavekort til</string>
    <string name="user_update_error_msg">Noget gik galt med opdateringen af din profil</string>
    <string name="not_valid_email">ikke en gyldig email</string>
    <string name="take_gc_picture">Tag billede af gavekortet</string>
    <string name="take_picture_text">Tag billede</string>
    <string name="msg_error_create_gc">Ups, noget gik galt</string>
    <string name="gc_details_tile">Gavekortsoversigt</string>
    <string name="create_or_signin_text">Log ind eller opret bruger</string>

</resources>
