<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="properties"
            type="dk.android.giifty.model.GiftcardProperties" />

        <import type="dk.android.giifty.utils.Utils" />

        <import type="org.joda.time.DateTime" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/value_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/value"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:text="@={properties.value}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sales_price_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/your_price"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:text="@={properties.price}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/comment"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:text="@={properties.description}" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/select_expiry_date_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_time_24dp" />

            <TextView
                android:id="@+id/from_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView6"
                android:text="@string/expiry_date"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/expiry_date_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@{Utils.formatTime(properties.expirationDate)}"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="normal" />
        </RelativeLayout>
    </LinearLayout>
</layout>
